--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "namonsterse": "ivinreact",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ivin1998.github.io/ivinaustan",
+  "homepage": "https://ivin1998.github.io/monsters",
   "dependencies": {
     "@testing-library/jest-domonsters": "^5.16.2",
     "@testing-library/react": "^12.1.2",
